--- a/pom.xml
+++ b/pom.xml
@@ -53,17 +53,17 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-		  <groupId>net.sourceforge.tess4j</groupId>
-		   <artifactId>tess4j</artifactId>
-		   <version>4.5.4</version>
-		</dependency>
+<!--		<dependency>-->
+<!--		  <groupId>net.sourceforge.tess4j</groupId>-->
+<!--		   <artifactId>tess4j</artifactId>-->
+<!--		   <version>4.5.4</version>-->
+<!--		</dependency>-->
 		<!-- https://mvnrepository.com/artifact/com.asprise.ocr/java-ocr-api -->
-		<dependency>
-			<groupId>com.asprise.ocr</groupId>
-			<artifactId>java-ocr-api</artifactId>
-			<version>15.3.0.3</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.asprise.ocr</groupId>-->
+<!--			<artifactId>java-ocr-api</artifactId>-->
+<!--			<version>15.3.0.3</version>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
 			<artifactId>okhttp</artifactId>
@@ -72,7 +72,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.13.0</version> <!-- Replace with the latest version -->
+			<version>2.16.1</version> <!-- Replace with the latest version -->
 		</dependency>
 
 	</dependencies>
